@@ -81,7 +81,9 @@ the default is
 .BR debian/substvars .
 No variable substitution is done on any of the fields that are output,
 however the special variable \fIFormat\fR will override the field of the
-same name.
+same name. This option can be used multiple times to read substitution
+variables from multiple files.
+
 .TP
 .BI \-D field = value
 Override or add an output control file field.
