@@ -110,7 +110,8 @@ See \fBdeb\-substvars\fP(5) for a discussion of output substitution.
 .BI \-T substvarsfile
 Read substitution variables in
 .IR substvarsfile ;
-the default is to not read any file.
+the default is to not read any file. This option can be used multiple
+times to read substitution variables from multiple files.
 .TP
 .BI \-D field = value
 Override or add an output control file field.
