@@ -46,6 +46,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * dpkg-buildpackage now supports options --source-option=<opt> and
     --changes-option=<opt> to forward arbitrary options to dpkg-source and
     dpkg-genchanges respectively. Closes: #566230
+  * The -T option of dpkg-{source,gencontrol,genchanges} can now be used
+    multiple times to read substitution variables from multiple files.
+    Closes: #363323
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
